--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,10 @@
     "iron-icons": "PolymerElements/iron-icons#^2.1.1",
     "paper-button": "PolymerElements/paper-button#^2.1.1",
     "paper-card": "PolymerElements/paper-card#^2.1.0",
-    "paper-dialog": "PolymerElements/paper-dialog#^2.1.1"
+    "paper-dialog": "PolymerElements/paper-dialog#^2.1.1",
+    "paper-progress": "PolymerElements/paper-progress#^2.1.1",
+    "paper-input": "PolymerElements/paper-input#^2.2.3",
+    "paper-toast": "polymerelements/paper-toast#^2.1.2"
   },
   "devDependencies": {
     "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0",
