--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,10 @@
     "paper-dialog": "PolymerElements/paper-dialog#^2.1.1",
     "paper-progress": "PolymerElements/paper-progress#^2.1.1",
     "paper-input": "PolymerElements/paper-input#^2.2.3",
-    "paper-toast": "polymerelements/paper-toast#^2.1.2"
+    "paper-toast": "polymerelements/paper-toast#^2.1.2",
+    "paper-icon-button": "PolymerElements/paper-icon-button#^2.2.0",
+    "paper-avatar": "NeilujD/paper-avatar/elements/paper-avatar#^2.0.1",
+    "paper-menu-button": "PolymerElements/paper-menu-button#^2.1.1"
   },
   "devDependencies": {
     "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0",
