--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "paper-toast": "polymerelements/paper-toast#^2.1.2",
     "paper-icon-button": "PolymerElements/paper-icon-button#^2.2.0",
     "paper-avatar": "NeilujD/paper-avatar/elements/paper-avatar#^2.0.1",
-    "paper-menu-button": "PolymerElements/paper-menu-button#^2.1.1"
+    "paper-menu-button": "PolymerElements/paper-menu-button#^2.1.1",
+    "paper-listbox": "PolymerElements/paper-listbox#^2.1.1"
   },
   "devDependencies": {
     "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0",
