--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,9 @@
     "paper-icon-button": "PolymerElements/paper-icon-button#^2.2.0",
     "paper-avatar": "NeilujD/paper-avatar/elements/paper-avatar#^2.0.1",
     "paper-menu-button": "PolymerElements/paper-menu-button#^2.1.1",
-    "paper-listbox": "PolymerElements/paper-listbox#^2.1.1"
+    "paper-listbox": "PolymerElements/paper-listbox#^2.1.1",
+    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^2.1.0",
+    "neon-animation": "PolymerElements/neon-animation#^2.0.0"
   },
   "devDependencies": {
     "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0",
